<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -                                                                                          -
  - Throughout this file, you will see <xliff:g> tags. These help any potential translators    -
  - properly translate your strings and also give developers that are looking at your strings  -
  - an idea of exactly how they are used.                                                      -
  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->

<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Popular Movies</string>

    <string name="backdrop_content_description">Movie backdrop image</string>
    <string name="poster_content_description">Movie poster image</string>
    <string name="trailer_content_description">Trailer preview image</string>
    <string name="add_to_favorites_button_content_description">Add to favorites</string>
    <string name="remove_from_favorites_button_content_description">Remove from favorites</string>

    <!--Error messages-->
    <string name="time_out">Time out!</string>
    <string name="no_internet">No Internet!</string>
    <string name="no_data_found">No data found!</string>
    <string name="unexpected_error">Opsss. Unexpected error occurred.</string>
    <string name="no_favorites_found">You have no favorite movie yet.</string>

    <!--Movie List Type Values-->
    <string name="popular" translatable="false">popular</string>
    <string name="top_rated" translatable="false">top_rated</string>
    <string name="favorite" translatable="false">favorite</string>

    <!--Movie List Type Options-->
    <string name="popular_option">Popular</string>
    <string name="top_rated_option">Top rated</string>
    <string name="favorite_option">Favorite</string>

    <string name="movie_list_type_default">@string/popular</string>
    <string name="movie_list_type_spinner">Movie list type spinner</string>

    <!--Movie Detail-->
    <!--https://stackoverflow.com/questions/24785305/android-getstring-xliff-format-float-double-->
    <string name="rating"><xliff:g id="rating">%1$.1f</xliff:g>/10</string>
    <string name="youtube_preview_url">https://i1.ytimg.com/vi/<xliff:g id="key">%1$s</xliff:g>/mqdefault.jpg</string>

    <!--Accessibility-->
    <string name="a11y_movie_title">Movie title: <xliff:g id="title">%1$s</xliff:g></string>
    <string name="a11y_release_date">Release date: <xliff:g id="release_date">%1$s</xliff:g></string>
    <string name="a11y_rating">Rating: <xliff:g id="rating">%1$.1f</xliff:g> over 10</string>
    <string name="a11y_overview">Overview: <xliff:g id="overview">%1$s</xliff:g></string>
    <string name="retry">Retry</string>

    <!--ContentProvider-->
    <string name="content_authority" translatable="false">com.figengungor.popularmovies</string>
    <string name="videos">Videos</string>
    <string name="reviews">Reviews</string>
    <string name="videos_empty_message">No videos found.</string>
    <string name="reviews_empty_message">No reviews found.</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="similar_movies_empty_message">No similar movies found.</string>
    <string name="cast">Cast</string>
    <string name="cast_empty_message">No cast found.</string>
    <string name="details">Details</string>
    <string name="release_date">Release Date</string>
    <string name="original_title">Original Title</string>
    <string name="original_language">Original Language</string>
    <string name="revenue">Revenue</string>
    <string name="budget">Budget</string>
    <string name="genres">Genres</string>
    <string name="genres_empty_message">No genres found.</string>
    <string name="see_more">See More</string>
    <string name="youtube_video_choser_title">Play video with</string>
    <string name="birth_death_day"><xliff:g id="birthday">%1$s</xliff:g> - <xliff:g id="deathday">%2$s</xliff:g></string>
    <string name="twitter_url">https://twitter.com/<xliff:g id="twitter_id">%1$s</xliff:g></string>
    <string name="facebook_url">https://www.facebook.com/<xliff:g id="facebook_id">%1$s</xliff:g></string>
    <string name="instagram_url">https://www.instagram.com/<xliff:g id="instagram_id">%1$s</xliff:g></string>
    <string name="social_chooser_title">Open with</string>
    <string name="director">Director</string>
    <string name="writer">Writer</string>
    <string name="tagged_images">Tagged Images</string>
    <string name="bio_empty_message">There is no biography about this person, yet.</string>
    <string name="twitter_profile_content_description">Open twitter profile</string>
    <string name="facebook_profile_content_description">Open facebook profile</string>
    <string name="instagram_profile_content_description">Open instagram profile</string>
    <string name="a11y_tagged_image">Tagged image: <xliff:g id="tagged_image">%1$s</xliff:g></string>
    <string name="empty_general">-</string>
    <string name="genre">#<xliff:g id="genre">%1$s</xliff:g></string>
    <string name="duration">Duration</string>
    <string name="duration_format"><xliff:g id="genre">%1$d</xliff:g> min</string>

</resources>
