<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/castTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_bold"
        android:text="@string/cast"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="8dp"
        android:background="@color/white"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/castRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/item_similar_movie" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/emptyMessageTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cast_empty_message"
            android:textColor="@color/white"
            android:fontFamily="@font/play_regular"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </FrameLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/directorLabelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_bold"
        android:text="@string/director"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="16dp"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/directorTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:text="@string/empty_general"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/writerLabelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_bold"
        android:text="@string/writer"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/writerTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/play_regular"
        android:text="@string/empty_general"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>